# NebulaStudios-Website

./: .gitattributes  .gitignore  AI.md  LICENSE  NOTICES  README.md  br.go  build.ps1  go.mod  go.sum  google-oauth-proxy.js  linux.md  package-lock.json  package.json  tsconfig.json  编译命令.txt
.github/workflows/: deploy.yml
cmd/server/: main.go  routes.go  tasks.go
data/: ai-prompt.txt  email-template.html  email-texts.json  email.json
docs/: oauth-integration.md
img-processor/: Cargo.toml  README.md  build.zig
img-processor/src/: main.rs  main.zig  stb_impl.c
internal/cache/: user.go  user_cache_test.go
internal/config/: config.go  config_test.go
internal/handlers/: ai.go  auth.go  oauth.go  policy.go  qrlogin.go  static.go  static_test.go  user.go
internal/middleware/: auth.go  ban.go  compress.go  cors.go  interfaces.go  ratelimit.go  security.go
internal/models/: admin_log.go  data_export.go  db.go  email_whitelist.go  interfaces.go  oauth_client.go  oauth_token.go  policy.go  qrlogin.go  schema.go  session_token.go  token.go  user.go  user_consent.go  user_log.go
internal/paths/: paths.go
internal/services/: captcha.go  email.go  export.go  export_token.go  img-processor-bin  imgprocessor.go  interfaces.go  oauth.go  policy.go  r2.go  session.go  token.go  turnstile.go  websocket.go
internal/utils/: bind.go  cookie.go  crypto.go  errors.go  export.go  interfaces.go  ip.go  logger.go  response.go  time.go  validators.go
internal/version/: github.go  version.go
shared/components/: header.html  language-switcher.html
shared/i18n/: de.json  (+7 more)
(+180 files in other folders)
