[package]
name = "img-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webp = "0.3"
tokio = { version = "1", features = ["rt", "net", "io-util", "signal", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
